--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -1,18 +1,14 @@
 name: Deploy static content to Pages
-
 on:
   push:
     branches: [ "main" ]
-  workflow_dispatch:
 permissions:
   contents: read
   pages: write
   id-token: write
-
 concurrency:
   group: "pages"
   cancel-in-progress: false
-
 jobs:
   deploy:
     environment:
@@ -20,20 +16,16 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Set up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: 22
-      - name: Build documentation
-        run: ./gradlew dokkaHtmlMultiModule
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+          java-version: '22'
+          distribution: 'temurin'
+          cache: gradle
+      - run: ./gradlew dokkaHtmlMultiModule
+      - uses: actions/configure-pages@v5
+      - uses: actions/upload-pages-artifact@v3
         with:
           path: 'build/doc'
-      - name: Deploy to GitHub Pages
+      - uses: actions/deploy-pages@v4
         id: deployment
-        uses: actions/deploy-pages@v4
