--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,22 +1,19 @@
-name: Test
-
+name: Run JUnit tests
 on: [ push, pull_request ]
-
+permissions:
+  contents: read
+concurrency:
+  group: "test"
+  cancel-in-progress: false
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-      - name: set up JDK
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v4
         with:
           java-version: '22'
           distribution: 'temurin'
           cache: gradle
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-      - name: Build with Gradle
-        run: ./gradlew test
+      - run: chmod +x gradlew
+      - run: ./gradlew test
