--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -26,6 +26,6 @@ jobs:
       - uses: actions/configure-pages@v5
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: 'build/doc'
+          path: 'build/dokka/htmlMultiModule'
       - uses: actions/deploy-pages@v4
         id: deployment
