only run check once

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,9 @@
 name: Run JUnit tests
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 permissions:
   contents: read
 concurrency:
