--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Run JUnit tests
+name: Gradle Tests
 on:
   push:
     branches:
@@ -11,7 +11,6 @@ concurrency:
   cancel-in-progress: false
 jobs:
   test:
-    name: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
