get version from env variable

--- a/.github/workflows/publish_maven_central.yml
+++ b/.github/workflows/publish_maven_central.yml
@@ -22,6 +22,7 @@ jobs:
           cache: gradle
       - run: ./gradlew publishAllPublicationsToMavenCentralRepository
         env:
+          ORG_GRADLE_PROJECT_version: ${{ github.ref_name }}
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALUSERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.ORG_GRADLE_PROJECT_MAVENCENTRALPASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.ORG_GRADLE_PROJECT_SIGNINGINMEMORYKEY }}
