--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
-agp = "8.6.1"
-kotlin = "2.1.20"
-coreKtx = "1.13.1"
+agp = "9.0.0"
+kotlin = "2.3.0"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
-lifecycle = "2.8.7"
-activityCompose = "1.9.3"
-composeBom = "2025.04.00"
-appcompat = "1.7.0"
-material = "1.12.0"
-foundationAndroid = "1.7.8"
-material3Android = "1.3.2"
-dokka = "2.0.0"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
+lifecycle = "2.10.0"
+activityCompose = "1.12.3"
+composeBom = "2026.01.01"
+appcompat = "1.7.1"
+material = "1.13.0"
+foundationAndroid = "1.10.2"
+material3Android = "1.4.0"
+dokka = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,10 +33,10 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-foundation-android = { group = "androidx.compose.foundation", name = "foundation-android", version.ref = "foundationAndroid" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+compose-material-icons = { group = "androidx.compose.material", name = "material-icons-core" }
 
 [plugins]
 com-android-library = { id = "com.android.library", version.ref = "agp" }
 com-android-application = { id = "com.android.application", version.ref = "agp" }
-org-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 org-jetbrains-kotlin-plugin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 org-jetbrains-dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
